--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "meanjs",
-  "description": "Full-Stack JavaScript with MongoDB, Express, AngularJS, and Node.js.",
+  "name": "medeaapp",
+  "description": "Full-Stack JavaScript with MongoDB, Express, AngularJS, and Node.js",
   "version": "0.5.0-beta",
   "meanjs-version": "0.5.0-beta",
   "private": false,
-  "author": "https://github.com/meanjs/mean/graphs/contributors",
+  "author": "sami",
   "license": "MIT",
   "repository": {
     "type": "git",
@@ -76,7 +76,7 @@
     "grunt-contrib-csslint": "~0.4.0",
     "grunt-contrib-cssmin": "~0.12.3",
     "grunt-contrib-less": "~1.0.1",
-    "grunt-contrib-sass": "~1.0.0",
+    "grunt-contrib-sass": "^1.0.0",
     "grunt-contrib-uglify": "~1.0.0",
     "grunt-contrib-watch": "~0.6.1",
     "grunt-env": "~0.4.4",
